<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_Invoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Detalji"
                android:textSize="18sp" />

            <Button
                android:id="@+id/dismiss_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="160dp"
                android:layout_marginEnd="157dp"
                android:layout_marginBottom="29dp"
                android:text="OK" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>